added reusable commands exercise

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,11 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo ${CIRCLE_WORKFLOW_ID
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -23,6 +28,12 @@ jobs:
           at: ~/
       - run: cat ~/output.txt
 
+  my_job:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - print_pipeline_id
+
 workflows:
   my_workflow:
     jobs:
@@ -30,3 +41,4 @@ workflows:
       - print_output_file:
           requires:
             - save_hello_world_output
+      - my_job
