--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,29 @@ version: 2.1
 commands:
   print_pipeline_id:
     steps:
-      - run: echo ${CIRCLE_WORKFLOW_ID
+      - run: echo ${CIRCLE_WORKFLOW_ID}
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
+  save_hello_world_output:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo "hello world" > ~/output.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
+
   my_job:
     docker:
       - image: circleci/node:13.8.0
@@ -19,5 +37,9 @@ jobs:
 workflows:
   my_workflow:
     jobs:
+      - save_hello_world_output
       - my_job
-      
+      - print_output_file:
+          requires:
+            - save_hello_world_output
+    
